[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'nodeseeklite'
version = '0.0.1'
requires-python = '>=3.11,<3.12'
dependencies = [
    'click==8.1.7',
    'Werkzeug==3.0.3',
    'Flask==3.0.3',
    'SQLAlchemy==2.0.30',
    'Flask-SQLAlchemy==3.1.1',
    'gevent==24.2.1',
    'gunicorn==22.0.0',
    'pendulum==3.0.0',
    'arrow==1.3.0',
    'pydantic==2.7.1',
    'pydantic-settings==2.2.1',
    'feedparser==6.0.11',
    'APScheduler==3.10.4',
]
[project.scripts]
nodeseeklite = 'nodeseeklite.cli:cli'

[tool.setuptools.packages.find] # https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
where = ['src']
include = ['*']

[tool.setuptools.package-data]
'*' = ['*.*']
